--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -1,14 +1,11 @@
 DeckDraw:
     Label:
-        text: "Spies & Lovers"
+        text: "Lovers & Spies"
 
 
 <CardDisplay>:
     canvas:
         Rectangle:
-            texture: root.card and root.card.texture
+            texture: root.texture
             size: dp(200), dp(280)
             pos: root.pos[0]-dp(100), root.pos[1]-dp(140)
-    #Label:
-    #    pos: root.pos[0]-dp(50), root.pos[1]-dp(200)
-    #    text: root.card.name
