Round # on one line

--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -27,7 +27,7 @@
 
 
 <RoundCounter>:
-    text: "Round\n%s of %s" % (root.round_number, root.max_round)
+    text: "Round %s of %s" % (root.round_number, root.max_round)
 
 
 <ToolTipDisplay>:
