--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -50,27 +50,101 @@
             text_size: self.parent.size[0], self.text_size[1]
             font_size: dp(12)
             size_hint: 1, None
+
+
+<FinalScoreDisplay>:
+    orientation: "vertical"
+    Label:
+        text: root.get_win_text()
+    SuitDisplay:
+        pscore: root.score.total(1)
+        dscore: root.score.total(0)
             
 
+<AchievementDisplay>:
+    orientation: "vertical"
+    Widget:
+    BoxLayout:
+        Widget:
+            canvas:
+                Rectangle:
+                    texture: app.get_achievement_texture(root.achievement)
+                    size: min(self.size[0], self.size[1]), min(self.size[1], self.size[0])
+                    pos: self.pos[0], self.pos[1]
+        BoxLayout:
+            orientation: "vertical"
+            Label:
+                text: "[b]Congratulations![/b]"
+                markup: True
+                text_size: self.size
+                size_hint: (1, .25)
+            Label:
+                text: "[b]%s[/b]" % root.achievement.name
+                text_size: self.size
+                markup: True
+                size_hint: (1, .25)
+            Label:
+                text: root.achievement.description
+                text_size: self.size
+    Widget:
+
+
 <UnlockDisplay>:
-    canvas:
-        Rectangle:
-            texture: app.get_achievement_texture(root.achievement)
-            size: min(root.size[0], root.size[1]), min(root.size[1], root.size[0])
     BoxLayout:
         orientation: "vertical"
+        Label:
+            text: "[b]Congratulations![/b]"
+            markup: True
+            text_size: self.size
+            size_hint: (1, .25)
+        Widget:
+            canvas:
+                Rectangle:
+                    texture: app.get_achievement_texture(root.achievement)
+                    size: min(self.size[0], self.size[1]), min(self.size[1], self.size[0])
+                    pos: self.pos[0], self.pos[1]
         Label:
             text: "[b]%s[/b]" % root.achievement.name
+            text_size: self.size
             markup: True
+            size_hint: (1, .25)
         Label:
             text: root.achievement.description
-    CardDisplay:
-        card: root.reward
+            text_size: self.size
     BoxLayout:
         orientation: "vertical"
+        size_hint: (2, 1)
         Label:
-            text: "[b]%s[/b]" % root.reward.name if root.reward is not None else ""
-            markup: True
-        Label:
-            text: root.reward.description if root.reward is not None else ""
+            text: "You have UNLOCKED:"
+            size_hint: (1, .25)
+        BoxLayout:
+            CardDisplay:
+                card: root.reward
+            BoxLayout:
+                orientation: "vertical"
+                Label:
+                    text: "[b]%s[/b]" % root.reward.name if root.reward is not None else ""
+                    text_size: self.size
+                    markup: True
+                    size_hint: (1, .25)
+                Label:
+                    text: root.reward.description if root.reward is not None else ""
+                    text_size: self.size
 
+
+<WinnerScreen>:
+    BoxLayout:
+        orientation: "vertical"
+        Carousel:
+            id: carousel
+            direction: "right"
+            size_hint: (1, 3)
+        Label:
+            text: "Play Again?"
+        BoxLayout:
+            Button:
+                text: "YES"
+                on_press: root.manager.play_again()
+            Button:
+                text: "no"
+                on_press: app.stop()
