--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -127,6 +127,14 @@
                     text_size: self.size
 
 
+<DealerDisplay>:
+    canvas:
+        Rectangle:
+            texture: app.get_dealer_texture(*root.get_dealer())
+            size: min(self.size[0], self.size[1]), min(self.size[0], self.size[1])
+            pos: self.pos[0] + (root.size[0] - self.size[0]) / 2, self.pos[1]
+
+
 <WinnerScreen>:
     BoxLayout:
         orientation: "vertical"
