--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -79,6 +79,7 @@
         Widget:
         Button:
             text: "Play With" if root.purchased else "Purchase"
+            on_release: root.clicked()
         Widget:
 
 
