--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -351,7 +351,7 @@
             Color:
                 rgba: root.get_shading(root.earned)
             Rectangle:
-                texture: app.achievement_texture and app.get_achievement_texture(root.achievement)
+                texture: app.achievement_texture and app.deck_achievement_texture and app.get_achievement_texture(root.achievement)
                 size: min(self.size[0], self.size[1]), min(self.size[1], self.size[0])
                 pos: self.pos[0], self.pos[1]
         size_hint_x: 1.25
