--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -290,9 +290,7 @@
 
 ## Home Screen - gui/screens/home.py ##
 
-<HomeButton@Button>:
-    source: ""
-    text: ""
+<HomeButton>:
     FloatLayout:
         Widget:
             canvas.before:
